# torch-android

./: README.md  build.sh
android-demo-cifar/appication/: build.sh
android-demo-cifar/appication/jni/: Application.mk
android-demo/assets/: main.lua
android-demo/jni/: Android.mk  Application.mk  torchandroid.cpp  torchandroid.h
src/: CMakeLists.txt
src/cmake/: android.toolchain.cmake
src/exe/: CMakeLists.txt
src/exe/lua/: CMakeLists.txt
src/exe/lua/src/: lcode.c  ldblib.c  ldo.c  lgc.c  liolib.c  llex.c  lstrlib.c  lua.c  luaconf.h.in
src/lib/TH/: CMakeLists.txt  THStorage.c  THStorage.h
src/lib/luaT/: CMakeLists.txt  luaT.c
src/pkg/torch/: CMakeLists.txt
src/pkg/torch/cmake/: TorchExports.cmake  TorchPackage.cmake  TorchPaths.cmake  TorchWrap.cmake
src/pkg/torch/lib/TH/: CMakeLists.txt
src/pkg/torch/lib/luaT/: CMakeLists.txt
