# -*- cmake -*-

set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS FALSE)

SET( C_HAS_inline_EXITCODE
     TRUE
     CACHE STRING "Result from TRY_RUN" FORCE)

SET( C_HAS___inline___EXITCODE
     TRUE
     CACHE STRING "Result from TRY_RUN" FORCE)

SET( C_HAS___inline_EXITCODE
     TRUE
     CACHE STRING "Result from TRY_RUN" FORCE)

SET( HAS_GCC_ATOMICS_EXITCODE
     TRUE
     CACHE STRING "Result from TRY_RUN" FORCE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake"
                      "${CMAKE_BINARY_DIR}/cmake" "${CMAKE_MODULE_PATH}")

ADD_SUBDIRECTORY(exe)

# Torch base packages
ADD_SUBDIRECTORY(pkg)

# Torch extra packages
ADD_SUBDIRECTORY(3rdparty)
